[gd_scene load_steps=3 format=3 uid="uid://dnkvrdim8e2rb"]

[ext_resource type="Script" path="res://screens/landing/landing.gd" id="1_mm3lp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1n14a"]

[node name="Landing" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mm3lp")

[node name="NoServerWarning" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Server is unavailable"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Welcome,"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_1n14a")
placeholder_text = "name"
max_length = 12
caret_blink = true

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Join" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
disabled = true
text = "Join"

[node name="Create" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
disabled = true
text = "Create"

[node name="ErrorDialog" type="AcceptDialog" parent="CenterContainer"]
title = "Error"
size = Vector2i(176, 100)
always_on_top = true
popup_window = true
max_size = Vector2i(360, 240)
content_scale_mode = 2
content_scale_aspect = 1
dialog_text = "Server is unavailable"

[node name="LobbyNameDialog" type="ConfirmationDialog" parent="CenterContainer"]
title = " Lobby"
size = Vector2i(200, 120)
always_on_top = true
popup_window = true
min_size = Vector2i(180, 120)
max_size = Vector2i(0, 0)
ok_button_text = "     OK     "
cancel_button_text = "  Cancel  "

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/LobbyNameDialog"]
offset_right = 40.0
offset_bottom = 40.0

[node name="LineEdit" type="LineEdit" parent="CenterContainer/LobbyNameDialog/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
placeholder_text = "Lobby ID"

[connection signal="text_changed" from="CenterContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/Join" to="." method="_on_join_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/Create" to="." method="_on_create_button_up"]
[connection signal="confirmed" from="CenterContainer/LobbyNameDialog" to="." method="_on_lobby_name_dialog_confirmed"]
